Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109659

Audio capturing and playing does not work on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.8, 6.4.3, 6.5.0, 6.6.0
    • 6.3.2, 6.4.3, 6.5.0
    • Multimedia
    • None
    • Lenovo TAB4 10 TB-X304F
      Android 8.1.0
      kernel: 3.16.71
    • Android
    • b5e0c68b9 (dev), a7992c9b8 (6.5), 5663b1201 (6.4), 3ba679efc (tqtc/lts-6.2), 3245781b1 (dev), f3cf84ad5 (6.5), f85a6f877 (tqtc/lts-6.2)
    • 2023wk04FOQtforAndroid, 2023wk06FOQtforAndroid, 2023wk20FOQtforAndroid, 2023wk22FOQtforAndroid

      I've created an app for "megaphone" purpose: capturing audio from selected audio input device and playing it on selected audio output device using QML (MediaDevices, CaptureSession)

      Application works fine on Windows 10 bit no success on Android tablet: available devices are listed, Bluetooth connected loudspeaker included) but whatever input/output device is selected, there is no sign neither recording nor playing anything.

      Interestingly none of input or output devices have "default" attribut "true" in Androind. In contrast there is one in Windows...

      Full log and application is attached.

      SW/HW info:

      • Lenovo TAB4 10 TB-X304F
      • Android 8.1.0
      • kernel: 3.16.71

      Summary of logs:

      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 480
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 672
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 720
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 960
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 1326
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 1440
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 1920
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 2655
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 1536
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied, rates do not match 64000 Hz, require 48000 Hz
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied, rates do not match 88200 Hz, require 48000 Hz
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied, rates do not match 96000 Hz, require 48000 Hz
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied, rates do not match 192000 Hz, require 48000 Hz
      W AudioRecord: AUDIO_INPUT_FLAG_FAST denied by server; frameCount 0 -> 2655
      ...
      D qml     : : audioOutputs:  [QAudioDevice(1, Built in speaker (Lenovo TB-X304F), false, Output),QAudioDevice(55, Bluetooth (PhilipsBT), false, Output)]
      D qml     : : audioInputs:  [QAudioDevice(9, Built in microphone (Lenovo TB-X304F), false, Input),QAudioDevice(7, FM TUNER (Lenovo TB-X304F), false, Input),QAudioDevice(60, Bluetooth (PhilipsBT), false, Input)]
      ...
      W VideoCapabilities: Unrecognized profile 2130706433 for video/avc
      W VideoCapabilities: Unrecognized profile 2130706434 for video/avc
      W VideoCapabilities: Unsupported mime video/divx
      W VideoCapabilities: Unsupported mime video/divx4
      W Utils   : could not parse long range '137-134'
      W Utils   : could not parse long range '146-132'
      W VideoCapabilities: Unrecognized profile 2130706433 for video/avc
      W VideoCapabilities: Unrecognized profile 2130706434 for video/avc
      I VideoCapabilities: Unsupported profile 4 for video/mp4v-es
      W qt.multimedia.mediarecorder.android: : No default input device was set.
      

       

      BTW. I was not able to attach any files during issue creation - there was complaints about lacking some token - but it worked fine when tried to attach them after issue is created and edited.

        1. megaphone.7z
          65 kB
          Zoltan Lutor
        2. megaphone.txt
          7 kB
          Zoltan Lutor
        3. megaphone-android-does-not-work-6.5.0
          12 kB
          Zoltan Lutor
        4. SoundStreaming.mp4
          3.59 MB
          Bartlomiej Moskal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            zlutor Zoltan Lutor
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: