android-backend: Route audio from input to output device

CaptureSession has a functionality of route audio to an output device by
assigning an AudioOutput object to the audioOutput property. It was
missing in android-backend.

This commit add implementation for streaming audio from chosen input
device to chosen output device.

Fixes: QTBUG-109659
Change-Id: I07dfe2188dd9e98a740ccaa6188daaf8e34ca0df
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit b5e0c68b965bd9e6ea99e1c20994d33194324220)