src/multimedia/platform/android/mediacapture/qandroidcapturesession_p.h
@@ -153,6 +153,7 @@ private:
     CaptureProfile getProfile(int id);
 
     void restartViewfinder();
+    void updateStreamingState();
 
     QAndroidMediaEncoder *m_mediaEncoder = nullptr;
     std::shared_ptr<AndroidMediaRecorder> m_mediaRecorder;
@@ -180,6 +181,7 @@ private:
     QList<qreal> m_supportedFramerates;
 
     QMetaObject::Connection m_audioInputChanged;
+    QMetaObject::Connection m_audioOutputChanged;
     QMetaObject::Connection m_connOpenCamera;
     QMetaObject::Connection m_connActiveChangedCamera;
 
